--- a/projets.html
+++ b/projets.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="index.html">Accueil</a>
         <a href="projets.html">Projets</a>
-        <a href="CV_francais.pdf" target="_blank">CV</a>
+        <a href="cv.html">CV</a>
         <a href="contact.html">Contact</a>
     </nav>
 
