--- a/projets.html
+++ b/projets.html
@@ -46,16 +46,31 @@
         <div class="project">
             <h2>Projet 2 : Single cell Omics, traitement intégratif des données scRNA-seq et scProtéomiques</h2>
             <p>
-                Un site statique construit en HTML, CSS et JavaScript pour présenter
-                mes travaux, mon parcours et mon portfolio. 
-                L’accent a été mis sur la simplicité et la responsivité.
+              Conception de workflows pour le prétraitement la normalisation et l’exploration de données
+              transcriptomiques et protéomiques
+              Identification de signatures biologiques par intégration de données haute dimension
+              Utilisation d’outils de deep learning dont SCVI pour modéliser et analyser les données cellulaires
             </p>
             <div class="buttons">
-                <a href="sc_RNA_sc_Proteomic.pptx" download class="btn">Télécharger le diaporama</a>
-                <a href="https://github.com/Yohan-b976/Transcriptomic-and-proteomic-sc-analysis" target="_blank" class="btn secondary">🔗 Voir sur GitHub</a>
+                <a href="projets.html" download class="btn">Télécharger le diaporama pas disponible</a>
+                <a href="projets.html" target="_blank" class="btn secondary">🔗 Non visible sur GitHub</a>
             </div>
         </div>
 
+
+
+        <div class="project">
+            <h2>Projet 3 : Projet de ML sur des bases de données Kaggles</h2>
+            <p>
+              Ce dépôt contient deux notebooks Jupyter dédiés à des projets de machine learning utilisant des jeux de données Kaggle :
+              Classification d'objets géocroiseurs de la NASA (Near-Earth Objects)
+              Prédiction des coûts d'assurance médicale
+              Chaque projet couvre le prétraitement des données, l'entraînement de modèles, leur évaluation et la visualisation des résultats.
+            </p>
+            <div class="buttons">
+                <a href="https://github.com/Yohan-b976/ML-Project-using-Kaggle-datasets.git" target="_blank" class="btn secondary">🔗 Voir sur GitHub</a>
+            </div>
+        </div>
     </main>
 
     <footer>
