--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <h2>Me contacter</h2>
     <p>Vous pouvez me joindre par email ou via mon profil LinkedIn :</p>
     <ul>
-      <li>Email : <a href="mailto:votre.email@example.com">votre.email@example.com</a></li>
+      <li>Email : <a href="mailto:yohan.beaumatin@agroparistech.fr">yohan.beaumatin@agroparistech.fr</a></li>
       <li>LinkedIn : <a href="https://www.linkedin.com/in/yohan-beaumatin-05a28725a/" target="_blank" rel="noopener noreferrer">linkedin.com/in/votreprofil</a></li>
     </ul>
   </section>
