--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <p>Vous pouvez me joindre par email ou via mon profil LinkedIn :</p>
     <ul>
       <li>Email : <a href="mailto:yohan.beaumatin@agroparistech.fr">yohan.beaumatin@agroparistech.fr</a></li>
-      <li>LinkedIn : <a href="https://www.linkedin.com/in/yohan-beaumatin-05a28725a/" target="_blank" rel="noopener noreferrer">linkedin.com/in/votreprofil</a></li>
+      <li>LinkedIn : <a href="https://www.linkedin.com/in/yohan-beaumatin-05a28725a/" target="_blank" rel="noopener noreferrer">linkedin.com/in/yohan-beaumatin</a></li>
     </ul>
   </section>
 </main>
