Add RNA-seq project description to projets.html
Added details for RNA-seq Reproducibility Pipeline project.

--- a/projets.html
+++ b/projets.html
@@ -71,6 +71,20 @@
                 <a href="https://github.com/Yohan-b976/ML-Project-using-Kaggle-datasets.git" target="_blank" class="btn secondary">🔗 Voir sur GitHub</a>
             </div>
         </div>
+
+        <div class="project">
+            <h2>Projet 4 : RNA-seq Reproducibility Pipeline (Nextflow + Docker)</h2>
+            <p>
+              Ce dépôt contient un pipeline Nextflow DSL2 entièrement reproductible permettant de reproduire l'analyse RNA-seq décrite dans l'article :
+
+              Nature Communications (2020) “Intracellular Staphylococcus aureus persisters upon antibiotic exposure.”
+
+              Le pipeline suit les étapes : FASTQ → trimming → download du génome → indexation → alignement → comptage → analyse différentielle.
+            </p>
+            <div class="buttons">
+                <a href="https://github.com/Yohan-b976/rna-seq-s-aureus-persisters.git" target="_blank" class="btn secondary">🔗 Voir sur GitHub</a>
+            </div>
+        </div>
     </main>
 
     <footer>
