Improve readability in Projet 3 description
Added a comma and period for better readability in project description.

--- a/projets.html
+++ b/projets.html
@@ -37,8 +37,8 @@
         <h2>Projet 3 : Projet de ML sur des bases de données Kaggles</h2>
         <p>
           Ce dépôt contient deux notebooks Jupyter dédiés à des projets de machine learning utilisant des jeux de données Kaggle :
-          Classification d'objets géocroiseurs de la NASA (Near-Earth Objects)
-          Prédiction des coûts d'assurance médicale
+          Classification d'objets géocroiseurs de la NASA (Near-Earth Objects),
+          Prédiction des coûts d'assurance médicale.
           Chaque projet couvre le prétraitement des données, l'entraînement de modèles, leur évaluation et la visualisation des résultats.
         </p>
         <div class="buttons">
